single_user_clients/templates/streamviewer/streamviewer.yml
kind: Service
apiVersion: v1
metadata:
  name: streamviewer-service
spec:
  selector:
    app: streamviewer
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: streamviewer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamviewer
  template:
    metadata:
      labels:
        app: streamviewer
    spec:
      serviceAccountName: esp-operator
      containers:
      - name: streamviewer-container
        image: TEMPLATE_STREAMVIEWER_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
