single_user_clients/templates/streamviewer/ingress-streamviewer.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamviewer
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: streamviewer.TEMPLATE_ESP_NAMESPACE.TEMPLATE_ESP_DOMAIN
    http:
      paths:
      -  backend:
          serviceName: streamviewer-service # the service to hit
          servicePort: 80            # externally exposed port
